temp testing lexicon changes

--- a/views/lexicon/forms/select.html.twig
+++ b/views/lexicon/forms/select.html.twig
@@ -603,6 +603,68 @@
 
     {{
         form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'class': 'form__group--mini',
+            'append': '.00',
+            'prepend': '£',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--mini',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--mini',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
+    {{
+        form.select({
             'id': 'select-20',
             'label': 'Small',
             'class': 'form__group--small',
@@ -619,6 +681,69 @@
             ]
         })
     }}
+
+    {{
+        form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'class': 'form__group--small',
+            'append': '.00',
+            'prepend': '£',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--small',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--small',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
 
     {{
         form.select({
@@ -641,6 +766,69 @@
 
     {{
         form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'class': 'form__group--medium',
+            'append': '.00',
+            'prepend': '£',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--medium',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--medium',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
+
+    {{
+        form.select({
             'id': 'select-22',
             'label': 'Regular',
             'name': 'inputSelectRegular',
@@ -656,6 +844,66 @@
             ]
         })
     }}
+
+    {{
+        form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'prepend': '£',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
 
     {{
         form.select({
@@ -678,6 +926,69 @@
 
     {{
         form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'prepend': '£',
+            'class': 'form__group--large',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--large',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--large',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
+
+    {{
+        form.select({
             'id': 'select-24',
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
@@ -697,6 +1008,69 @@
 
     {{
         form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'prepend': '£',
+            'class': 'form__group--xlarge',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--xlarge',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--xlarge',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
+
+    {{
+        form.select({
             'id': 'select-25',
             'label': 'Full',
             'class': 'form__group--full',
@@ -713,6 +1087,69 @@
             ]
         })
     }}
+
+    {{
+        form.select({
+            'id': 'select-29',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'prepend': '£',
+            'class': 'form__group--full',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-30',
+            'label': 'Prepended button',
+            'prepend': html.button({ 'label': 'foo' }),
+            'prepend_type': 'button',
+            'class': 'form__group--full',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+    {{
+        form.select({
+            'id': 'select-31',
+            'label': 'Appended button',
+            'append': html.button({ 'label': 'foo' }),
+            'append_type': 'button',
+            'class': 'form__group--full',
+            'options': [
+                {
+                    'label': 'Value one',
+                    'value': 'value1'
+                },
+                {
+                    'label': 'Value two',
+                    'value': 'value2'
+                }
+            ]
+        })
+    }}
+
+
+
 
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Appended &amp; Prepended' }) }}
