--- a/views/lexicon/forms/text.html.twig
+++ b/views/lexicon/forms/text.html.twig
@@ -293,12 +293,76 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--1',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--1',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--1',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+    {{
+        form.text({
             'id': 'text-2-col',
             'label': 'Two columns',
             'class': 'form__control-col--2',
             'name': 'inputTextSmall'
         })
     }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--2',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--2',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--2',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
 
     {{
         form.text({
@@ -311,12 +375,78 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--3',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--3',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--3',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-4-col',
             'label': 'Four columns',
             'class': 'form__control-col--4',
             'name': 'inputTextRegular'
         })
     }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--4',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--4',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--4',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
 
     {{
         form.text({
@@ -329,12 +459,78 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--5',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--5',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--5',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-6-col',
             'label': 'Six columns',
             'class': 'form__control-col--6',
             'name': 'inputTextXLarge'
         })
     }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--6',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--6',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--6',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
 
     {{
         form.text({
@@ -347,6 +543,39 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--7',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--7',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--7',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-8-col',
             'label': 'Eight columns',
             'class': 'form__control-col--8',
@@ -356,10 +585,73 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--8',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--8',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--8',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-9-col',
             'label': 'Nine columns',
             'class': 'form__control-col--9',
             'name': 'inputTextFull'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__control-col--9',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__control-col--9',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__control-col--9',
+            'append': html.button({ 'label': 'Button' })
         })
     }}
 
@@ -377,12 +669,77 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--mini',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--mini',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--mini',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+    {{
+        form.text({
             'id': 'text-22',
             'label': 'Small',
             'class': 'form__group--small',
             'name': 'inputTextSmall'
         })
     }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--small',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--small',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--small',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
 
     {{
         form.text({
@@ -395,12 +752,78 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--medium',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--medium',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--medium',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-24',
             'label': 'Regular',
             'class': 'form__group--regular',
             'name': 'inputTextRegular'
         })
     }}
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--regular',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--regular',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--regular',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
 
     {{
         form.text({
@@ -413,6 +836,39 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--large',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--large',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--large',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-26',
             'label': 'Extra Large',
             'class': 'form__group--xlarge',
@@ -422,12 +878,78 @@
 
     {{
         form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--xlarge',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--xlarge',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--xlarge',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
+
+
+    {{
+        form.text({
             'id': 'text-27',
             'label': 'Full',
             'class': 'form__group--full',
             'name': 'inputTextFull'
         })
     }}
+
+
+    {{
+        form.text({
+            'id': 'text-30',
+            'label': 'Appended with guidance',
+            'append': '.00',
+            'class': 'form__group--full',
+            'guidance': 'Help text to give more information about expected input'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-31',
+            'label': 'Prepended &amp; Appended',
+            'append': '.00',
+            'class': 'form__group--full',
+            'prepend': '£'
+        })
+    }}
+
+    {{
+        form.text({
+            'id': 'text-32',
+            'label': 'Appended button',
+            'append_type': 'button',
+            'class': 'form__group--full',
+            'append': html.button({ 'label': 'Button' })
+        })
+    }}
+
+
 
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Appended &amp; Prepended' }) }}
