Fix issue where tform fields aren't responsive due to td whitespace no-wrap

--- a/stylesheets/_component.tables.scss
+++ b/stylesheets/_component.tables.scss
@@ -187,6 +187,7 @@
 tr.table__form,
 td.table__form {
     padding: 10px 10px 24px 20px;
+    white-space: normal;
 
     form {
         background-color: transparent;
