--- a/stylesheets/_component.input-groups.scss
+++ b/stylesheets/_component.input-groups.scss
@@ -31,7 +31,7 @@
     }
 }
 
-// Display as table-cell
+// Use flexbox and fallback to table for IE9
 // -------------------------
 .input-group-addon,
 .input-group-btn,
